# medquiz-app

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  run.ps1  run.py
assets/: style.css
docs/: KEYBOARD_SHORTCUTS.md
legacy-python/: requirements.txt  run.py
legacy-python/app/: __init__.py  config.py  database.py  explanations.py  file_parser.py  main.py  nbme_guide.py  question_generator.py  quiz_service.py  source_metadata.py  subject_tags.py
legacy-python/app/ui/: create_quiz.py  main_window.py  question_bank.py  quiz_view.py  settings.py  take_quiz.py  theme.py
scripts/: inspect_db.py
src/: config.rs  db.rs  lib.rs  llm.rs  main.rs  models.rs  services.rs  ui.rs
src/domain/: analytics.rs  backfill.rs  citations.rs  explanations.rs  learn.rs  mod.rs  nbme.rs  subjects.rs
src/parsers/: mod.rs
src/ui/: bank.rs  common.rs  home.rs  learn.rs  materials.rs  mod.rs  quiz.rs  settings.rs  sidebar.rs
