[package]
name = "medquiz"
version = "0.2.0"
edition = "2021"
description = "MedQuiz — USMLE & COMLEX practice (Rust / Dioxus)"
default-run = "medquiz"

[[bin]]
name = "backfill"
path = "src/bin/backfill.rs"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
rusqlite = { version = "0.33", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "6"
rfd = "0.15"
zip = "2"
pdf-extract = "0.8"
rand = "0.8"
anyhow = "1"
thiserror = "2"